// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputField.svelte > should render default 1`] = `
<body>
  <div>
    <input-field
      class="flex flex-col input-text empty"
    >
       
      <field
        class="w-full flex flex-row items-center"
      >
         
        <input
          aria-label="name"
          id="name"
          name="name"
          type="text"
        />
        
        
      </field>
       
    </input-field>
  </div>
</body>
`;

exports[`InputField.svelte > should render null 1`] = `
<body>
  <div>
    <input-field
      class="flex flex-col input-text empty"
    >
       
      <field
        class="w-full flex flex-row items-center"
      >
         
        <input
          type="text"
        />
        
        
      </field>
       
    </input-field>
  </div>
</body>
`;

exports[`InputField.svelte > should render when disabled 1`] = `
<body>
  <div>
    <input-field
      class="flex flex-col input-text disabled"
    >
      <label>
        text
      </label>
       
      <field
        class="w-full flex flex-row items-center"
      >
         
        <input
          aria-label="text"
          readonly=""
          type="text"
        />
        
        
      </field>
       
    </input-field>
  </div>
</body>
`;

exports[`InputField.svelte > should render when disabled 2`] = `
<body>
  <div>
    <input-field
      class="flex flex-col input-text"
    >
      <label>
        text
      </label>
       
      <field
        class="w-full flex flex-row items-center"
      >
         
        <input
          aria-label="text"
          type="text"
        />
        
        
      </field>
       
    </input-field>
  </div>
</body>
`;

exports[`InputField.svelte > should render with custom class an type 1`] = `
<body>
  <div>
    <input-field
      class="flex flex-col input-number custom empty"
    >
       
      <field
        class="w-full flex flex-row items-center"
      >
         
        <input
          type="number"
        />
        
        
      </field>
       
    </input-field>
  </div>
</body>
`;

exports[`InputField.svelte > should render with description 1`] = `
<body>
  <div>
    <input-field
      class="flex flex-col input-text "
    >
      <label>
        text
      </label>
       
      <field
        class="w-full flex flex-row items-center"
      >
         
        <input
          aria-label="description"
          type="text"
        />
        
        
      </field>
       
    </input-field>
  </div>
</body>
`;

exports[`InputField.svelte > should render with icon 1`] = `
<body>
  <div>
    <input-field
      class="flex flex-col input-text empty"
    >
       
      <field
        class="w-full flex flex-row items-center"
      >
        <icon
          aria-label="icon"
          class="flex flex-shrink-0 items-center justify-center "
          role="img"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="icon"
          />
        </icon>
         
        <input
          type="text"
        />
        
        
      </field>
       
    </input-field>
  </div>
</body>
`;

exports[`InputField.svelte > should render with label and value 1`] = `
<body>
  <div>
    <input-field
      class="flex flex-col input-text "
    >
      <label>
        text
      </label>
       
      <field
        class="w-full flex flex-row items-center"
      >
         
        <input
          aria-label="text"
          type="text"
        />
        
        
      </field>
       
    </input-field>
  </div>
</body>
`;

exports[`InputField.svelte > should render with label and value 2`] = `
<body>
  <div>
    <input-field
      class="flex flex-col input-text "
    >
      <label>
        other
      </label>
       
      <field
        class="w-full flex flex-row items-center"
      >
         
        <input
          aria-label="other"
          type="text"
        />
        
        
      </field>
       
    </input-field>
  </div>
</body>
`;

exports[`InputField.svelte > should render with label, value and status=fail 1`] = `
<body>
  <div>
    <input-field
      class="flex flex-col input-text fail"
    >
      <label>
        text
      </label>
       
      <field
        class="w-full flex flex-row items-center"
      >
         
        <input
          aria-label="text"
          type="text"
        />
        
        
      </field>
       
      <message
        class="fail"
      >
        error
      </message>
    </input-field>
  </div>
</body>
`;

exports[`InputField.svelte > should render with label, value and status=pass 1`] = `
<body>
  <div>
    <input-field
      class="flex flex-col input-text pass"
    >
      <label>
        text
      </label>
       
      <field
        class="w-full flex flex-row items-center"
      >
         
        <input
          aria-label="text"
          type="text"
        />
        
        
      </field>
       
      <message
        class="pass"
      >
        error
      </message>
    </input-field>
  </div>
</body>
`;

exports[`InputField.svelte > should render with label, value and status=warn 1`] = `
<body>
  <div>
    <input-field
      class="flex flex-col input-text warn"
    >
      <label>
        text
      </label>
       
      <field
        class="w-full flex flex-row items-center"
      >
         
        <input
          aria-label="text"
          type="text"
        />
        
        
      </field>
       
      <message
        class="warn"
      >
        error
      </message>
    </input-field>
  </div>
</body>
`;

exports[`InputField.svelte > should render with value 1`] = `
<body>
  <div>
    <input-field
      class="flex flex-col input-text "
    >
       
      <field
        class="w-full flex flex-row items-center"
      >
         
        <input
          type="text"
        />
        
        
      </field>
       
    </input-field>
  </div>
</body>
`;
